Fix padding on icons in collapsed navbar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -47,10 +47,6 @@ html {
     background-color: #006994; 
 }
 
-.navbar {
-  flex-wrap: nowrap;
-}
-
 .overlay {
 	height: 100%;
 	width: 100%;
@@ -77,6 +73,10 @@ a.type-badge > span.badge:hover {
 
 .toggler-icon {
   border: none;
+}
+
+.list-inline-item {
+  max-width: 25%;
 }
 
 /* -------------------------------- Footer */
